# qt5ct

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  PKGBUILD  README  qt5ct.pri  qt5ct.pro  test.sh
src/qt5ct/: CMakeLists.txt  appearancepage.cpp  appearancepage.h  fontconfigdialog.cpp  fontconfigdialog.h  fontspage.cpp  fontspage.h  iconthemepage.cpp  iconthemepage.h  interfacepage.cpp  interfacepage.h  main.cpp  mainwindow.cpp  mainwindow.h  paletteeditdialog.cpp  paletteeditdialog.h  qsseditordialog.cpp  qsseditordialog.h  qsspage.cpp  qsspage.h  qt5ct.cpp  qt5ct.desktop  qt5ct.h  qt5ct.pro  tabpage.cpp  tabpage.h  troubleshootingpage.cpp  troubleshootingpage.h
src/qt5ct-common/: CMakeLists.txt  qt5ct-common.pro  qt5ct.cpp  qt5ct.h
src/qt5ct-qtplugin/: CMakeLists.txt  main.cpp  qt5ct-qtplugin.pro  qt5ctplatformtheme.cpp  qt5ctplatformtheme.h
src/qt5ct-style/: CMakeLists.txt  plugin.cpp  qt5ct-style.pro  qt5ctproxystyle.cpp  qt5ctproxystyle.h
src/qt5ct/desktop-translations/: qt5ct_bg.desktop.in  qt5ct_ca.desktop.in  qt5ct_el.desktop.in  qt5ct_es.desktop.in  qt5ct_es_ES.desktop.in  qt5ct_fr.desktop.in  qt5ct_ja.desktop.in  qt5ct_nl_NL.desktop.in  qt5ct_pl.desktop.in  qt5ct_ru.desktop.in  qt5ct_zh_TW.desktop.in
src/qt5ct/translations/: qt5ct_ar.ts  qt5ct_bg.ts  qt5ct_ca.ts  qt5ct_cs.ts  qt5ct_da.ts  qt5ct_de.ts  qt5ct_el.ts  qt5ct_en.ts  qt5ct_es.ts  qt5ct_es_ES.ts  qt5ct_fi.ts  qt5ct_fr.ts  qt5ct_gl_ES.ts  qt5ct_he.ts  qt5ct_hu.ts  qt5ct_it.ts  qt5ct_it_IT.ts  qt5ct_ja.ts  qt5ct_kk.ts  qt5ct_lt.ts  qt5ct_nl.ts  qt5ct_nl_NL.ts  qt5ct_pl.ts  (+12 more)
